2014-12-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/process.rst: Update description of development process to be
	more aligned with the process actually used.

	* coders/wpg.c (ReadWPGImage): Avoid use of NULL pointer returned
	from FlipImage(), FlopImage(), and RotateImage().

	* coders/rle.c (ReadRLEImage): URT RLE reader is now more robust
	with errant files.

2014-12-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* libtool: Update bundled libtool to version 2.4.4.

	* magick/constitute.c (WriteImage): Remove bogus use of
	GetBlobStatus() as a catch-all for write errors.  Coders should be
	detecting write errors all by themselves.

2014-12-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Updated with more improvements since previous release.

	* coders/palm.c (WritePALMImage): Log header details.

	* coders/pdb.c: PDB reader and writer need to be more robust when
	calculating packets and buffer allocation.  Also log header
	details.  Problem was reported by Hanno Böck.

2014-12-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Updated with more improvements since previous release.

	* ttf: Update bundled Freetype to 2.5.4.

	* png: Update bundled libpng to 1.6.16.

2014-12-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): The libtiff JBIG coder only
	supports strip images, and fails when scanlines are requested.
	Force use of stripped read method when the file uses JBIG
	compression.  It is still not possible to write JBIG compressed
	TIFF files since there is not yet a strip writer.  Problem
	reported by Yuriy Kaminskiyon via the GM-bugs mailing list on
	2014-12-22.

2014-12-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (QuantumTransferMode): Fix quantum transfer
	handling for photometrics which might deliver one or three samples
	per pixel.  These were assuming that three samples were always
	provided.
