@@ -198,7 +198,7 @@ static int convertHTMLcodes(char *s, int len)
             break;
         }
         if (o < 6)
-          (void) strcpy(s+1, s+1+o);
+          (void) memmove(s+1,s+1+o,strlen(s+1+o)+1);
         *s = val;
         return o;
       }
@@ -214,7 +214,7 @@ static int convertHTMLcodes(char *s, int len)
         if (html_codes[i].len <= len)
           if (stringnicmp(s, html_codes[i].code, (size_t) (html_codes[i].len)) == 0)
             {
-              (void) strcpy(s+1, s+html_codes[i].len);
+              (void) memmove(s+1, s+html_codes[i].len, strlen(s+html_codes[i].len)+1);
               *s = html_codes[i].val;
               return html_codes[i].len-1;
             }
